# signatory-1

./: CHANGES.md  Cargo.toml  README.md
.github/workflows/: rust.yml
signatory-dalek/: Cargo.toml
signatory-dalek/src/: lib.rs
signatory-ledger-tm/: Cargo.toml
signatory-ledger-tm/benches/: ed25519.rs
signatory-ledger-tm/src/: ledgertm.rs  lib.rs  signer.rs
signatory-ring/: Cargo.toml  README.md
signatory-ring/benches/: ecdsa.rs
signatory-ring/src/: ed25519.rs  lib.rs
signatory-ring/src/ecdsa/: p256.rs  p384.rs
signatory-secp256k1/: Cargo.toml
signatory-secp256k1/benches/: ecdsa.rs
signatory-secp256k1/src/: lib.rs
signatory-sgx/: Cargo.toml  README.md
signatory-sgx-app/: Cargo.toml  README.md
signatory-sgx-app/src/: main.rs  sgx_app.rs
signatory-sgx-app/src/sgx_app/: keypair_seal.rs
signatory-sgx/src/: lib.rs  shared.rs  signer.rs
signatory-sodiumoxide/: Cargo.toml
signatory-sodiumoxide/src/: lib.rs
src/: ecdsa.rs  ed25519.rs  lib.rs  public_key.rs
src/ecdsa/: nistp256.rs  nistp384.rs  secp256k1.rs
src/ed25519/: public_key.rs  seed.rs
