[package]
name        = "signatory"
description = "Multi-provider elliptic curve digital signature library with ECDSA and Ed25519 support"
version     = "0.22.0" # Also update html_root_url in lib.rs when bumping this
license     = "Apache-2.0 OR MIT"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
homepage    = "https://github.com/iqlusioninc/signatory"
repository  = "https://github.com/iqlusioninc/signatory/tree/develop"
readme      = "README.md"
categories  = ["authentication", "cryptography", "no-std"]
keywords    = ["cryptography", "ecdsa", "ed25519", "signing", "signatures"]
edition     = "2018"
autobenches = false

[dependencies]
ecdsa = { version = "0.8", optional = true, default-features = false, features = ["digest", "hazmat", "zeroize"] }
ed25519 = { version = "1", optional = true, default-features = false }
getrandom = { version = "0.1", optional = true, default-features = false }
k256 = { version = "0.5", optional = true, default-features = false, features = ["ecdsa-core", "sha256"] }
p256 = { version = "0.5", optional = true, default-features = false, features = ["ecdsa-core", "sha256"] }
p384 = { version = "0.4", optional = true, default-features = false, features = ["ecdsa", "sha384"] }
sha2 = { version = "0.9", optional = true, default-features = false }
signature = { version = "1.2", default-features = false, features = ["derive-preview"] }
zeroize = { version = "1", default-features = false }

[dependencies.subtle-encoding]
version = "0.5"
optional = true
default-features = false
features = ["base64", "hex"]

[features]
alloc = []
default = ["encoding", "getrandom", "std"]
digest = ["signature/digest-preview"]
encoding = ["subtle-encoding"]
pkcs8 = ["encoding"]
std = ["alloc", "signature/std", "subtle-encoding/std"]
test-vectors = []

[workspace]
members = [
    "signatory-ledger-tm",
    "signatory-secp256k1",
    "signatory-sodiumoxide",
]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
