[package]
name = "signatory-sgx-app"
version = "0.22.0"
authors = ["Tomas Tauber <2410580+tomtau@users.noreply.github.com>", "Linfeng Yuan <linfeng@crypto.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_env = "sgx")'.dependencies]
signatory-sgx = { version = "0.22",  default-features = false, path = "../signatory-sgx" }
bincode = "1.3.1"
ed25519-dalek = "1"
rand = "0.7"
aes-gcm-siv = "0.8.0"
sgx-isa = { version = "0.3", features = ["sgxstd"] }
zeroize = "1.1"
